[tool.poetry]
name = "coo"
version = "0.1.2"
description = "schedule Twitter updates with easy"
authors = ["wilfredinni"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.0"
python-twitter = "^3.5"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.6"
pytest = "^4.0"
sphinx = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
